# terminal-rpg

./: .gitignore  CLAUDE.md  README.md  ROADMAP.md  pyproject.toml  rpg.py
.github/workflows/: build.yml  ci.yml
design/: content_audit.md
docs/: QUESTS.md
scripts/: download-build.sh  upload-to-itch.sh
terminalquest/: __init__.py  __main__.py  accessory.py  armor.py  ascii_filter.py  audio.py  audio_synth.py  banners.py  boss_music_synth.py  chronicle.py  color.py  combat.py  combatant.py  companion.py  composer.py  content.py  curses_io.py  dialogue.py  encounters.py  endings.py  endings_screens.py  enemy.py  game.py  hireling.py  locations.py  map_panel.py  marks.py  pet.py  player.py  quests.py  saves.py  settings.py  sq_services.py  state.py  status.py  travel.py  ui.py  vendors.py  weapon.py
terminalquest/data/: abilities.json  accessories.json  armor.json  classes.json  companions.json  components.json  dialogues.json  enemies.json  hirelings.json  locations.json  marks.json  npcs.json  pets.json  quests.json  zones.json
tests/: conftest.py  test_audio.py  test_banners.py  test_boss_music.py  test_chronicle.py  test_combat.py  test_combat_helpers.py  test_composer.py  test_content.py  test_curses_io.py  test_final_coverage_push.py  test_game.py  test_locations.py  test_map_panel.py  test_marks.py  test_phase1_coverage.py  test_phase2a_game.py  test_phase2b_audio.py  test_phase2c_curses.py  test_phase3_coverage.py  test_phase3b_locations.py  test_phase3c_tail.py  test_player.py  test_saves.py  test_sim.py  test_status.py  test_tools_quests.py  test_vendors_coverage.py  test_weapon.py
tools/: __init__.py  balance_baseline.json  sim.py
tools/quests/: __init__.py  __main__.py
