[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mournhold"
version = "1.4.0"
description = "A hermetic, offline grimdark terminal RPG."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
# Runtime dependencies are intentionally empty — the game stays hermetic.
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.1"]

[project.scripts]
mournhold = "terminalquest.game:main"

[tool.setuptools]
packages = ["terminalquest"]

[tool.setuptools.package-data]
terminalquest = ["data/*.json"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
