[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mournhold"
version = "2.32.0"
description = "A hermetic, offline grimdark terminal RPG."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
# Runtime dependencies are intentionally empty — the game stays hermetic.
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.1"]

[project.scripts]
mournhold = "terminalquest.game:main"

[tool.setuptools]
packages = ["terminalquest", "tools", "tools.quests"]

[tool.setuptools.package-data]
terminalquest = ["data/*.json"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
source = ["terminalquest"]
branch = false

[tool.coverage.report]
# Lines genuinely not worth covering — keep the list tight.
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    'if __name__ == "__main__":',
    "raise NotImplementedError",
    "def __repr__",
]
skip_covered = false
show_missing = true
# CI gate. `coverage report` exits non-zero below this number, blocking
# deploys / merges. Set during the v2.3 quality push (74% → 95%) and
# pinned to the level reached so we don't regress.
fail_under = 95
